src/htdocs/css/_template.scss
$body-margin: 8px !default;

$banner-image: '/theme/images/usgs-banner.jpg' !default;
$banner-background-color: #000 !default;


$site-title: 'U.S. Geological Survey' !default;
$site-title-color: #fff !default;
$site-title-background-color: #4E7AB9 !default;


$spacing: 8px !default;
$horizontal-spacing: $spacing !default;
$vertical-spacing: $spacing !default;


$breakpoint-full: 768px !default;
// 20% of 768 px = 153.6
$side-column-width: 20% !default;


$page-footer-color: #999 !default;
$page-footer-background-color: #FFF !default;
$page-footer-border-color: #DDD !default;


$search-background-color: #EEE !default;
$search-border-color: #CCC !default;


$sitenav-color: #132840 !default;
$sitenav-background-color: #C9D8E9 !default;
$sitenav-color-hover: #111 !default;
$sitenav-background-color-hover: darken($sitenav-background-color, 10%) !default;
$sitenav-border-color-hover: #111 !default;


$sectionnav-color: $sitenav-color !default;
$sectionnav-background-color: lighten($sitenav-background-color, 10%) !default;
$sectionnav-color-hover: $sitenav-color-hover !default;
$sectionnav-background-color-hover: lighten($sitenav-background-color-hover, 10%) !default;
$sectionnav-border-color: #CCC !default;


$offcanvas-width: 80% !default;
$offcanvas-toggle-color: $sitenav-color !default;
$offcanvas-toggle-background-color: $sitenav-background-color !default;
$offcanvas-toggle-border-color: $offcanvas-toggle-color !default;
$offcanvas-toggle-color-hover: $sitenav-color-hover !default;
$offcanvas-toggle-background-color-hover: $sitenav-background-color-hover !default;
$offcanvas-toggle-border-color-hover: $sitenav-border-color-hover !default;

$offcanvas-transition-time: .5s !default;


* {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}


body {
	font-family: arial,helvetica,sans-serif;
	margin: $body-margin;
}


img {
	max-width: 100%;
}

@import 'typography';
@import 'banner';
@import 'page';
@import 'social';
@import 'footer';
@import 'offcanvas';

